Fix spacing in DGA sections

--- a/app/views/report/genomic-report/microbial/microbial.scss
+++ b/app/views/report/genomic-report/microbial/microbial.scss
@@ -1,3 +1,9 @@
 .bg-white {
-    background-color: white;
+  background-color: white;
+}
+
+.microbial {
+  &__none {
+    margin: 32px auto;
+  }
 }
